fix: update font sizes for better readability in dark mode styles

--- a/sitehis/src/styles/page.css
+++ b/sitehis/src/styles/page.css
@@ -245,7 +245,7 @@ body.dark-page .bloco h3 {
     max-width: 95%;
     margin-left: auto;
     margin-right: auto;
-    font-size: 14px;
+    font-size: 1.4em;
     text-align: center;
   }
 
@@ -271,7 +271,7 @@ body.dark-page .bloco h3 {
 
 
   a {
-    font-size: 14px;
+    font-size: 1.4em;
     border-bottom-width: 1px;
     text-align: center;
     display: inline-block;
@@ -289,7 +289,7 @@ body.dark-page .bloco h3 {
   }
 
   .t1 {
-    font-size: 14px;
+    font-size: 1.4em;
     padding: 0.5em;
     text-align: center;
   }
